--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,5 @@ build:
   stage: build
   script:
     # - docker build --pull -t $TEST_IMAGE .
-    - docker build -t registry.hub.docker.com/cloudsandbox101/kubeloadbalancertest1:1.0.0 ./
-    - docker push registry.hub.docker.com/cloudsandbox101/kubeloadbalancertest1:1.0.0
+    - docker build -t docker.io/cloudsandbox101/kubeloadbalancertest1:1.0.0 ./
+    - docker push docker.io/cloudsandbox101/kubeloadbalancertest1:1.0.0
